[gd_scene format=3 uid="uid://d2rre1cg65hg1"]

[ext_resource type="Script" uid="uid://bmt3m5iyoirwp" path="res://scroll_item.gd" id="1_hm32b"]
[ext_resource type="FontFile" uid="uid://dndp060cphkkm" path="res://assets/tres/Source Han Sans CN&Comfortaa Hybrid.ttf" id="2_2365g"]
[ext_resource type="Texture2D" uid="uid://dxgna62048eux" path="res://assets/pic/Default.png" id="2_mag67"]
[ext_resource type="StyleBox" uid="uid://cj0gkcebpggl" path="res://assets/tres/ScrollItem.tres" id="3_yr5fh"]
[ext_resource type="FontVariation" uid="uid://bwxxlhukbwrqi" path="res://assets/tres/SpacingBold.tres" id="4_4ydh1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2365g"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8901961, 0.8901961, 0.8980392, 1)
corner_radius_top_left = 192
corner_radius_top_right = 192
corner_radius_bottom_right = 192
corner_radius_bottom_left = 192
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ydh1"]
bg_color = Color(1, 1, 1, 1)
border_color = Color(0.8901961, 0.8901961, 0.8980392, 1)
corner_radius_top_left = 192
corner_radius_top_right = 192
corner_radius_bottom_right = 192
corner_radius_bottom_left = 192
corner_detail = 16

[sub_resource type="Theme" id="Theme_4ydh1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hm32b"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 55
corner_radius_top_right = 55
corner_radius_bottom_right = 55
corner_radius_bottom_left = 55

[node name="ScrollItem" type="Control" unique_id=629230491]
custom_minimum_size = Vector2(0, 95)
layout_mode = 3
anchors_preset = 0
offset_top = 1.0
offset_right = 1005.0
offset_bottom = 96.0
script = ExtResource("1_hm32b")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1954616169]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 9

[node name="BG" type="Panel" parent="MarginContainer" unique_id=1140253138]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_yr5fh")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer" unique_id=1828403607]
layout_mode = 2
theme_override_constants/margin_left = 112

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer" unique_id=1074371756]
layout_mode = 2
theme_override_constants/separation = 9
alignment = 1

[node name="SongName" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer" unique_id=167099302]
layout_mode = 2
theme_override_colors/font_color = Color(0.27058825, 0.23137255, 0.7137255, 1)
theme_override_fonts/font = ExtResource("2_2365g")
theme_override_font_sizes/font_size = 25
text = "还没有导入谱面QwQ......"

[node name="SongWriter" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer" unique_id=302740227]
layout_mode = 2
theme_override_colors/font_color = Color(0.44705883, 0.41568628, 0.78431374, 1)
theme_override_fonts/font = ExtResource("2_2365g")
theme_override_font_sizes/font_size = 13
text = "请导入谱面"

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=531101477]
layout_mode = 0
offset_right = 1005.0
offset_bottom = 85.0

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer" unique_id=637115047]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 11
theme_override_constants/margin_bottom = 0

[node name="BrownCircle" type="Panel" parent="HBoxContainer/MarginContainer2" unique_id=1749032545]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_2365g")

[node name="WhiteCircle" type="Panel" parent="HBoxContainer/MarginContainer2/BrownCircle" unique_id=621499131]
clip_children = 2
custom_minimum_size = Vector2(85, 85)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.91, 0.91)
pivot_offset = Vector2(45, 45)
theme_override_styles/panel = SubResource("StyleBoxFlat_4ydh1")

[node name="Illustration" type="TextureRect" parent="HBoxContainer/MarginContainer2/BrownCircle/WhiteCircle" unique_id=727329995]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_4ydh1")
texture = ExtResource("2_mag67")
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer2" type="MarginContainer" parent="." unique_id=1086787392]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -20.5
offset_bottom = 20.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 60

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2" unique_id=603664077]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="Status" type="Panel" parent="MarginContainer2/HBoxContainer" unique_id=161045816]
modulate = Color(0.6, 0.6, 0.6, 1)
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hm32b")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/HBoxContainer" unique_id=2084600613]
layout_mode = 2
theme_override_constants/separation = 3
alignment = 1

[node name="LevelNumber" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer" unique_id=878408864]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = ExtResource("2_2365g")
theme_override_font_sizes/font_size = 25
text = "1"

[node name="LevelDifficulty" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer" unique_id=1040595663]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = ExtResource("4_4ydh1")
theme_override_font_sizes/font_size = 13
text = "EASY"
